Chaging <a>, stylebleed issues
While changing search inputs placeholder textcolor, textcolor in items were changed to white as well. Fixed this in each class

--- a/css/torgeternity.css
+++ b/css/torgeternity.css
@@ -149,7 +149,7 @@ div.actor ::-webkit-scrollbar {
 .window-app .window-content input[type="date"],
 .window-app .window-content input[type="time"] .editor {
     background-color: rgba(255, 255, 255, 0.39);
-    color:white;
+    /*color:white;*/
 }
 
 .window-app .window-content input::-moz-placeholder {
@@ -1918,6 +1918,7 @@ form.actor-sheet header input[name="name"] {
     background-size: cover;
     font-family: Signika;
     font-size: 15px;
+    color:black;
 }
 
 .window-content .actor-sheet .sheet-header h1 {
@@ -1986,6 +1987,7 @@ form.actor-sheet header input[name="name"] {
     border-radius: 50%;
     background: url(../images/roundBack.webp);
     background-size: cover;
+    color:black;
 }
 
 .window-content .actor-sheet .attributes ul li.attribut-block a,
@@ -2341,6 +2343,7 @@ form.actor-sheet header input[name="name"] {
     height: 50px;
     border: none;
     border-radius: 50%;
+    color:black;
 }
 
 .window-content .actor-sheet .defense {
@@ -2683,6 +2686,7 @@ form.actor-sheet.threat .tab[data-tab].active .editor {
     font-family: Alaska;
     font-size: 20px;
     text-align: center;
+    color:black;
 }
 
 .item .window-content form.item-sheet .sheet-content {
@@ -2707,11 +2711,13 @@ form.actor-sheet.threat .tab[data-tab].active .editor {
     border-radius: 15px;
     background: url(../images/roundBack.webp);
     background-size: cover;
+    color:black;
 }
 
 .item .window-content form.item-sheet .asside input[name="data.price"],
 .item .window-content form.item-sheet .asside input[name="data.tough"] {
     width: 50px;
+    color:black;
 }
 
 .item .window-content form.item-sheet .asside select {
